--- a/combined.tex
+++ b/combined.tex
@@ -129,6 +129,18 @@ there is no one set of tools.
     \end{itemize}
 }
 
+\subsection{Architecture}
+\frame{
+    \frametitle{Architecture}
+    \begin{itemize}
+        \item RDBMS (PostgreSQL) for storage
+        \item HTML templates
+        \item Turtle templates into other formats
+        \item Scrape into triple store
+        \item data structures into JSON, YAML
+    \end{itemize}
+}
+
 \subsection{Server}
 \frame{
     \frametitle{Server}
