--- a/combined.tex
+++ b/combined.tex
@@ -42,8 +42,8 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 %   -> datasets used
 
 \subsection{Who}
-\frametitle{Who}
 \frame{
+\frametitle{Who}
     \begin{itemize}
         \item Scientists
         \item Science analysts
@@ -163,6 +163,41 @@ there is no one set of tools.
         \item php (Drupal)
     \end{itemize}
 }
+
+\subsection{SPARQL}
+\begin{frame}[fragile]
+    \frametitle{SPARQL}
+     \url{http://bit.ly/1ilgeQz}
+\begin{tiny}
+\begin{semiverbatim}
+PREFIX dbpediaowl: <http://dbpedia.org/ontology/>
+PREFIX bibo: <http://purl.org/ontology/bibo/>
+PREFIX gcis: <http://data.globalchange.gov/gcis.owl#>
+PREFIX cito: <http://purl.org/spar/cito/>
+
+SELECT DISTINCT ?gcisjournal
+FROM <http://data.globalchange.gov/sparql>
+WHERE {
+{
+   SERVICE <http://data.globalchange.gov/sparql> {
+     ?gcisjournal a bibo:Journal .
+     ?gcisjournal bibo:issn ?issn .
+     ?gcisarticle gcis:inPublication ?gcisjournal .
+     ?gcisarticle cito:isCitedBy <http://data.globalchange.gov/report/nca3> .
+   } 
+   BIND(STRLANG(?issn, "en") AS ?issn_en)
+}  
+   SERVICE <http://dbpedia.org/sparql> {
+     ?dbpjournal dbpediaowl:frequencyOfPublication "Monthly"@en .
+     ?dbpjournal dbpediaowl:issn ?issn_en .
+     FILTER(STR(?issn_en) = ?issn)
+   } 
+}  
+\end{semiverbatim}
+\end{tiny}
+
+\end{frame}
+
 
 \subsection{Versioning}
 \frame{
