--- a/combined.tex
+++ b/combined.tex
@@ -27,7 +27,7 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 \frametitle{Outline}\tableofcontents 
 \end{frame}
 
-\section{Assembly}
+\section{NCA3 Assembly}
 
 %% overview
 
@@ -41,11 +41,22 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 %   -> Image
 %   -> datasets used
 
+\subsection{What}
+\frame{
+    \frametitle{What}
+    \begin{itemize}
+        \item The Third National Climate Assessment
+        \item PDF(s)
+        \item Website
+        \item Information System
+    \end{itemize}
+}
+
 \subsection{Who}
 \frame{
 \frametitle{Who}
     \begin{itemize}
-        \item Scientists
+        \item Scientists (Authors)
         \item Science analysts
         \item Editors
         \item Graphic designers
@@ -74,9 +85,9 @@ there is no one set of tools.
 }
 }
 
-\subsection{What}
+\subsection{Resources}
 \frame{
-\frametitle{What}
+\frametitle{Resources}
     The tools are used to represent and manipulate various resources.
     \begin{itemize}
         \item Journal Articles
@@ -118,7 +129,7 @@ there is no one set of tools.
 \frame{
     \frametitle{Functionality}
     \begin{itemize}
-        \item Support nca2014.globalchange.gov (jquery)
+        \item Support nca2014.globalchange.gov (jQuery)
         \item GCIS provides JSON backend
         \item Figures have client side calls
         \item Also uses dataset landing pages
@@ -137,7 +148,7 @@ there is no one set of tools.
         \item HTML templates
         \item Turtle templates into other formats
         \item Scrape into triple store
-        \item data structures into JSON, YAML
+        \item Data structures into JSON, YAML
     \end{itemize}
 }
 
@@ -159,7 +170,7 @@ there is no one set of tools.
     \begin{itemize}
         \item Python (Andrew)
         \item Perl
-        \item Javascript (jquery)
+        \item Javascript (jQuery)
         \item php (Drupal)
     \end{itemize}
 }
@@ -213,7 +224,10 @@ WHERE {
     \frametitle{Testing}
     \begin{itemize}
         \item Test driven development (unit tests)
-        \item QA (gcis-qa)
+        \item SPARQL tests
+        \item Continuous Integration Testing
+        \item Test driven data acquisition
+        \item Continuous Content Validation (gcis-qa)
     \end{itemize}
 }
 
@@ -259,10 +273,9 @@ WHERE {
 \end{frame}
 
 \section{Discussion}
-\subsection{Discussion}
 \begin{frame}
     \begin{center}
-        Thank you
+        Discussion
     \end{center}
 \end{frame}
 
