--- a/combined.tex
+++ b/combined.tex
@@ -9,10 +9,10 @@
 
 \begin{document}
 \title{The Global Change Information System}   
-\subtitle{Reports, Data, APIs, Communication and Information}
+\subtitle{Nuts and Bolts}
 \author{Brian Duggan\inst{1}\inst{2}, Steve Aulenbach\inst{1}\inst{2}, \\
 Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}} 
-\date{July 10, 2014} 
+\date{July 9, 2014} 
 \institute[shortinst]{\inst{1} UCAR, \inst{2} USGCRP, \inst{3} NASA}
 
 \begin{frame}[plain]
@@ -27,7 +27,7 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 \frametitle{Outline}\tableofcontents 
 \end{frame}
 
-\section{NCA3 Assembly}
+\section{NCA3 Report Assembly}
 
 %% overview
 
@@ -79,10 +79,6 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
         \item Wikis
         \item Various miscellaneous desktop and cloud software
     \end{itemize}
-\note{
-Report writing involves creativity and a wide variety of skills;
-there is no one set of tools.
-}
 }
 
 \subsection{Resources}
@@ -93,7 +89,9 @@ there is no one set of tools.
         \item Journal Articles
         \item Reports
         \item References
-        \item Images, Figures, Tables
+        \item Figures
+        \item Images
+        \item Tables
         \item Findings
         \item Organizations
         \item People
@@ -101,7 +99,23 @@ there is no one set of tools.
     \end{itemize}
 }
 
-
+\subsection{Resources}
+\frame{
+\frametitle{Resources}
+    http://data.globalchange.gov
+    \begin{itemize}
+        \item \href{http://data.globalchange.gov/article/10.1080/15287390801997625}{/article/10.1080/15287390801997625}
+        \item \href{http://data.globalchange.gov/report/usfs-pnw-gtr-855}{/report/usfs-pnw-gtr-855}
+        \item \href{http://data.globalchange.gov/reference/007a7014-723e-4ceb-a395-5c986b1bf884}{/reference/007a7014-723e-4ceb-a395-5c986b1bf884}
+        \item \href{http://data.globalchange.gov/report/nca3/figure/global-temperature-and-carbon-dioxide}{/report/nca3/figure/global-temperature-and-carbon-dioxide}
+        \item \href{http://data.globalchange.gov/image/26fc56f4-b4e0-425b-adc8-14c6d961d558}{/image/26fc56f4-b4e0-425b-adc8-14c6d961d558}
+        \item \href{http://data.globalchange.gov/report/nca3/table/decisions-scales}{/report/nca3/table/decisions-scales}
+        \item \href{http://data.globalchange.gov/report/nca3/finding/extreme-precipitation-increase}{/report/nca3/finding/extreme-precipitation-increase}
+        \item \href{http://data.globalchange.gov/organization/nasa}{/organization/nasa}
+        \item \href{http://data.globalchange.gov/person/0000-0001-6667-7047}{/person/0000-0001-6667-7047}
+        \item \href{http://data.globalchange.gov/dataset/nca3-cddv2-r1}{/dataset/nca3-cddv2-r1}
+    \end{itemize}
+}
 
 \subsection{Role of the GCIS}
 \frame{
@@ -124,7 +138,7 @@ there is no one set of tools.
 
 %% tech
 
-\section{Deployment}
+\section{Implementation}
 \subsection{Functionality}
 \frame{
     \frametitle{Functionality}
