--- a/combined.tex
+++ b/combined.tex
@@ -228,8 +228,8 @@ WHERE {
 \frame{
     \frametitle{Versioning}
     \begin{itemize}
-        \item git
-        \item Postgres audit triggers
+        \item git for code
+        \item Postgres audit mechanisms for content
     \end{itemize}
 }
 
