--- a/combined.tex
+++ b/combined.tex
@@ -192,7 +192,7 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 \subsection{SPARQL}
 \begin{frame}[fragile]
     \frametitle{SPARQL}
-     \url{http://bit.ly/1ilgeQz}
+     \url{http://bit.ly/gcistest}
 \begin{tiny}
 \begin{semiverbatim}
 PREFIX dbpediaowl: <http://dbpedia.org/ontology/>
