better bit.ly link

--- a/gcis_tech.tex
+++ b/gcis_tech.tex
@@ -159,7 +159,7 @@ Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}}
 \subsection{SPARQL}
 \begin{frame}[fragile]
     \frametitle{SPARQL}
-     \url{http://bit.ly/gcis-test}
+     \url{http://bit.ly/gcis-dbpedia}
 \begin{tiny}
 \begin{semiverbatim}
     PREFIX bibo: <http://purl.org/ontology/bibo/>
