fork for adaptable talk

--- a/adaptable.tex
+++ b/adaptable.tex
@@ -8,11 +8,15 @@
 \beamersetuncovermixins{\opaqueness<1>{25}}{\opaqueness<2->{15}}
 
 \begin{document}
-\title{The Global Change Information System}   
-\subtitle{Nuts and Bolts}
-\author{Brian Duggan\inst{1}\inst{2}, Steve Aulenbach\inst{1}\inst{2}, \\
-Robert Wolfe\inst{2}\inst{3}, Justin Goldstein\inst{1}\inst{2}} 
-\date{July 9, 2014} 
+\title{Adaptable Information Models in the Global Change Information System}
+\author{
+    Brian Duggan\inst{1}\inst{2},
+    Andrew Buddenberg\inst{3},
+    Steve Aulenbach\inst{1}\inst{2},
+    Robert Wolfe\inst{4},
+    Justin Goldstein\inst{1}\inst{2}
+}
+\date{July 16, 2014} 
 \institute[shortinst]{\inst{1} UCAR, \inst{2} USGCRP, \inst{3} NASA}
 
 \begin{frame}[plain]
