--- a/adaptable.tex
+++ b/adaptable.tex
@@ -12,13 +12,18 @@
 \title[Adaptable GCIS Information Models]{Adaptable Information Models in the Global Change Information System}
 \author[Duggan et al]{
     Brian Duggan\inst{1}\inst{2},
-    Andrew Buddenberg\inst{3},
+    Andrew Buddenberg\inst{3}, \\
     Steve Aulenbach\inst{1}\inst{2},
-    Robert Wolfe\inst{4},
+    Robert Wolfe\inst{1}\inst{4},
     Justin Goldstein\inst{1}\inst{2}
 }
 \date{July 16, 2014} 
-\institute[shortinst]{\inst{1} UCAR, \inst{2} USGCRP, \inst{3} NASA}
+\institute[UCAR, USGCRP, NASA]{
+\inst{1} US Global Change Research Program, \\
+\inst{2} University Coporation for Atmospheric Research, \\
+\inst{3} National Oceanic and Atmospheric Administration \\
+\inst{4} National Aeronautics and Space Administration
+}
 
 \begingroup
 \makeatletter
